Add some comment about host A configuration.

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -6,6 +6,7 @@ sim-time-limit = 25s
 
 *.host*.networkLayer.arpType = "GlobalARP"
 
+# Configure Host A to send UDP packets
 *.hostA.numUdpApps = 2
 *.hostA.udpApp[0].typename = "UDPBasicApp"
 *.hostA.udpApp[0].destAddresses = "hostB"
@@ -30,7 +31,6 @@ sim-time-limit = 25s
 *.hostB.udpApp[1].messageLength = 1000B
 *.hostB.udpApp[1].sendInterval = exponential(12ms)
 *.hostB.udpApp[1].packetName = "UDPData"
-
 
 *.host*.wlan[0].typename = "IdealWirelessNic"
 *.host*.wlan[0].mac.useAck = false
